# voir

./: pyproject.toml
.github/workflows/: python-package.yml
docs/: conf.py  guide.rst
src/voir/instruments/gpu/: cuda.py  hpu.py  rocm.py  xpu.py
tests/: conftest.py  test_argparse_ext.py  test_cli.py  test_forward.py  test_helpers.py  test_instruments.py  test_overseer.py  test_phase.py  test_proc.py  test_tools.py  test_wrapper.py
tests/programs/: hello.py  iterate.py  voirfile_fw.py
tests/test_cli/: test_bad_unicode.txt  test_cli_prelude0_.txt  test_cli_prelude1_.txt  test_dunder_instruments.txt  test_environ.txt  test_forward.txt
tests/test_forward/: test_multiplexer.txt
tests/test_helpers/: test_log.txt
tests/test_overseer/: test_error_in_load.txt  test_error_in_run.txt  test_error_unknown_program.txt  test_hello.txt  test_overseer_crash.txt
tests/test_proc/: test_multiplexer.txt
tests/test_tools/: test_configurable.txt  test_configurable2.txt  test_configurable3.txt  test_configurable4.txt  test_instrument_definition.txt
voir/: __init__.py  argparse_ext.py  async_overseer.py  asynctimer.py  cli.py  forward.py  helpers.py  overseer.py  phase.py  proc.py  run.py  scriptutils.py  smuggle.py  std.py  tools.py  utils.py  wrapper.py
voir/instruments/: __init__.py  cpu.py  gpu.py  io.py  log.py  monitor.py  network.py  utils.py
voir/instruments/gpu/: __init__.py  cpu.py  cuda.py  gaudi.py  hpu.py  rocm.py  xpu.py
