[tool.poetry]
name = "voir"
version = "0.1.0"
description = "Instrument, extend and visualize your programs"
authors = ["Olivier Breuleux <breuleux@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
ptera = "^1.0.1"
coleo = "^0.3.0"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
isort = "^5.10.1"
flake8 = "^4.0.1"
pytest = "^7.0.1"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
voir = "voir.cli:main"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
combine_as_imports = true
